Added FULLSHIPVPOR and test timing

--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T01:55:29.319816Z",
-     "start_time": "2020-02-05T01:55:27.314452Z"
+     "end_time": "2020-02-07T06:12:24.923611Z",
+     "start_time": "2020-02-07T06:12:23.981455Z"
     }
    },
    "outputs": [],
@@ -60,15 +60,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T01:55:31.740989Z",
-     "start_time": "2020-02-05T01:55:31.653109Z"
+     "end_time": "2020-02-07T06:12:42.537987Z",
+     "start_time": "2020-02-07T06:12:42.493710Z"
     }
    },
    "outputs": [],
    "source": [
     "sql_conn = pyodbc.connect('Driver={SQL Server};'\n",
     "                          'Server=KOHMANSF1\\SQLEXPRESS;'\n",
-    "                          'Database=MJSHIPMENT;'\n",
+    "                          'Database=TESTFULLSHIPVPOR;'\n",
     "                          'Trusted_Connection=yes;')"
    ]
   },
@@ -84,8 +84,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T01:55:34.015820Z",
-     "start_time": "2020-02-05T01:55:34.007837Z"
+     "end_time": "2020-02-07T06:12:43.799824Z",
+     "start_time": "2020-02-07T06:12:43.795837Z"
     }
    },
    "outputs": [],
@@ -301,6 +301,123 @@
     "                   row['Planning_Wk'], row['Product_Line'], row['Platform'], row['Program'], row['MPA'],\n",
     "                   row['Target_Location'], row['SKU'], row['WkDate'], row['PORQty'], row['Region'], row['ShipWkNo'],\n",
     "                   row['ShipTotal'], row['FK'], row['YYYYWW'])\n",
+    "\n",
+    "sql_conn.commit()\n",
+    "\n",
+    "cursor.close()\n",
+    "\n",
+    "sql_conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full ShipVPOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-07T06:12:50.920817Z",
+     "start_time": "2020-02-07T06:12:48.307809Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fullshipvpor_df = pd.read_csv(\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Final.csv', na_filter=False)\n",
+    "fullshipvpor_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-07T02:55:07.706301Z",
+     "start_time": "2020-02-07T02:55:07.699314Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fullshipvpor_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-07T03:11:49.210856Z",
+     "start_time": "2020-02-07T03:11:49.201881Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"CREATE TABLE FULLSHIPVPOR([Planning_Wk] VARCHAR(20), [YYYYWW] INT, [Region] VARCHAR(20), \\\n",
+    "               [MPA] VARCHAR(50),[Qty] INT, [QtyType] VARCHAR(10), [Platform] VARCHAR(50))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-07T03:42:09.210122Z",
+     "start_time": "2020-02-07T03:11:51.169382Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for index, row in fullshipvpor_df.iterrows():\n",
+    "\n",
+    "    cursor.execute(\"INSERT INTO FULLSHIPVPOR([Planning_Wk],[YYYYWW],[Region],[MPA], [Qty], [QtyType], [Platform]) \\\n",
+    "                   values(?,?,?,?,?,?,?)\",\n",
+    "                   row['Planning_Wk'], row['YYYYWW'], row['Region'], row['MPA'], row['Qty'],\n",
+    "                   row['QtyType'], row['Platform'])\n",
+    "\n",
+    "sql_conn.commit()\n",
+    "\n",
+    "cursor.close()\n",
+    "\n",
+    "sql_conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-07T06:13:04.264586Z",
+     "start_time": "2020-02-07T06:13:04.253617Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"CREATE TABLE TESTFULLSHIPVPOR([Planning_Wk] VARCHAR(20), [YYYYWW] INT, [Region] VARCHAR(20), \\\n",
+    "               [MPA] VARCHAR(50),[Qty] INT, [QtyType] VARCHAR(10), [Platform] VARCHAR(50))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-07T06:25:41.526920Z",
+     "start_time": "2020-02-07T06:13:05.753112Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for row in fullshipvpor_df.itertuples():\n",
+    "\n",
+    "    cursor.execute(\"INSERT INTO TESTFULLSHIPVPOR([Planning_Wk],[YYYYWW],[Region],[MPA], [Qty], [QtyType], [Platform]) \\\n",
+    "                   values(?,?,?,?,?,?,?)\",\n",
+    "                   row.Planning_Wk, row.YYYYWW, row.Region, row.MPA, row.Qty,\n",
+    "                   row.QtyType, row.Platform)\n",
     "\n",
     "sql_conn.commit()\n",
     "\n",
