--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -2,17 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T01:55:29.319816Z",
-     "start_time": "2020-02-05T01:55:27.314452Z"
+     "end_time": "2020-02-10T12:22:28.048728Z",
+     "start_time": "2020-02-10T12:22:28.045728Z"
     }
    },
    "outputs": [],
    "source": [
+    "from fast_to_SQL import fast_to_SQL as fts\n",
     "import pandas as pd\n",
-    "import pyodbc"
+    "import pyodbc\n",
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T12:35:20.520724Z",
+     "start_time": "2020-02-10T12:35:20.518723Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create a SQL Alchemy Engine to desired server/database\n",
+    "sqluser = \"DESKTOP-K5JG5O4\\SQLEXPRESS\"\n",
+    "sqlpass = \"\"\n",
+    "server = \"\"\n",
+    "db = \"TEST\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T12:35:37.257321Z",
+     "start_time": "2020-02-10T12:35:37.241419Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "engine = create_engine(\"mssql+pyodbc://{}:{}@{}/{}?driver=SQL+Server&trusted_connection=true\"\n",
+    "                       .format(sqluser,sqlpass,server,db))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T12:44:17.591884Z",
+     "start_time": "2020-02-10T12:43:39.422562Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('C:/Users/CFA_MJ/Desktop/Test.csv',na_filter=False)\n",
+    "df\n",
+    "# Run main function\n",
+    "fts.to_sql_fast(df, 'DFName', engine, if_exists = 'append', series = False, custom = None, temp = False)"
    ]
   },
   {
@@ -352,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
