--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -5,28 +5,30 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-07T06:12:24.923611Z",
-     "start_time": "2020-02-07T06:12:23.981455Z"
+     "end_time": "2020-02-12T05:45:22.962154Z",
+     "start_time": "2020-02-12T05:45:21.846139Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pyodbc"
+    "import pyodbc\n",
+    "from sqlalchemy import create_engine\n",
+    "from urllib.parse import quote_plus"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choose connection"
+    "# Connection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Local Server (Please set Server, Database, UID, PWD accordingly for the code below)**"
+    "**Local Server**"
    ]
   },
   {
@@ -34,25 +36,26 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T08:59:28.307001Z",
-     "start_time": "2020-02-04T08:59:28.134224Z"
+     "end_time": "2020-02-12T06:00:10.942135Z",
+     "start_time": "2020-02-12T06:00:10.936150Z"
     }
    },
    "outputs": [],
    "source": [
-    "sql_conn = pyodbc.connect('Driver={SQL Server};'\n",
-    "                          'Server=tcp:15.46.112.95,1433;'\n",
-    "                          'Database=2018POR;'\n",
-    "                          'UID=man;'\n",
-    "                          'PWD=123;'\n",
-    "                          'Trusted_Connection=NO;')"
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=SHIPVPOR;Trusted_Connection=yes\"\n",
+    "\n",
+    "table_name = 'SHIPVPOR'\n",
+    "\n",
+    "quoted = quote_plus(conn)\n",
+    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "engine = create_engine(new_con, fast_executemany=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Personal Server (Please set Server and Database accordingly for the code below)**"
+    "**External Server**"
    ]
   },
   {
@@ -60,23 +63,19 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-07T06:12:42.537987Z",
-     "start_time": "2020-02-07T06:12:42.493710Z"
+     "end_time": "2020-02-12T07:05:49.514996Z",
+     "start_time": "2020-02-12T07:05:49.510010Z"
     }
    },
    "outputs": [],
    "source": [
-    "sql_conn = pyodbc.connect('Driver={SQL Server};'\n",
-    "                          'Server=KOHMANSF1\\SQLEXPRESS;'\n",
-    "                          'Database=TESTFULLSHIPVPOR;'\n",
-    "                          'Trusted_Connection=yes;')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Create Cursor**"
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR1;UID=Admin;PWD=123\"\n",
+    "\n",
+    "table_name = 'FULLSHIPVPOR1'\n",
+    "\n",
+    "quoted = quote_plus(conn)\n",
+    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "engine = create_engine(new_con, fast_executemany=True)"
    ]
   },
   {
@@ -84,13 +83,31 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-07T06:12:43.799824Z",
-     "start_time": "2020-02-07T06:12:43.795837Z"
+     "end_time": "2020-02-12T03:16:04.386233Z",
+     "start_time": "2020-02-12T03:13:29.240917Z"
     }
    },
    "outputs": [],
    "source": [
-    "cursor = sql_conn.cursor()"
+    "df = pd.read_csv('Final.csv', dtype={'Planning_Wk': str, 'YYYYWW': int, 'Region': str, 'MPA': str,\n",
+    "                                     'Qty': float, 'QtyType': str, 'Platform': str})\n",
+    "df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-11T01:47:41.252039Z",
+     "start_time": "2020-02-11T01:47:38.765417Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Final.csv', na_filter=False)\n",
+    "df"
    ]
   },
   {
@@ -105,8 +122,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T01:55:37.365487Z",
-     "start_time": "2020-02-05T01:55:36.898118Z"
+     "end_time": "2020-02-12T03:34:14.416966Z",
+     "start_time": "2020-02-12T03:34:13.408621Z"
     }
    },
    "outputs": [],
@@ -114,60 +131,10 @@
     "shipment_df = pd.read_csv(\n",
     "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment.csv', na_filter=False)\n",
     "shipment_df['YYYYWW'] = shipment_df['YYYYWW'].astype('str')\n",
-    "shipment_df = shipment_df[(shipment_df[['Total']]!= 0).all(axis=1)]\n",
+    "shipment_df = shipment_df[(shipment_df[['Total']] != 0).all(axis=1)]\n",
+    "shipment_df.to_sql(table_name, engine, if_exists='replace',\n",
+    "                   chunksize=None, index=False)\n",
     "shipment_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Create Shipment table in database (Remove need for being a primary key for duplicates)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-05T01:55:55.805389Z",
-     "start_time": "2020-02-05T01:55:55.781425Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cursor.execute(\"CREATE TABLE SHIPMENT([FK] VARCHAR(100) NOT NULL, [SKU] VARCHAR(20), [Platform] VARCHAR(50), [Region] VARCHAR(50),[MPA] VARCHAR(50),\"\n",
-    "               \"[Target_Location] VARCHAR(20), [WkDate] INT, [ISO_WK_NR] INT, [Total] INT, [YYYYWW] VARCHAR(6), [QtyType] VARCHAR(10))\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Insert rows from Shipment file into database Shipment table (Change row[' '] accordingly to Shipment file column title)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-05T01:56:16.370316Z",
-     "start_time": "2020-02-05T01:56:01.853097Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for index, row in shipment_df.iterrows():\n",
-    "\n",
-    "    cursor.execute(\"INSERT INTO SHIPMENT([FK],[SKU],[Platform],[Region],[MPA],[Target_Location], [WkDate], [ISO_WK_NR], [Total], [YYYYWW],[QtyType])values(?,?,?,?,?,?,?,?,?,?,?)\",\n",
-    "                   row['FK'], row['SKU'], row['Platform'], row['Region_Ori'], row['MPA'], row['Target Location'], row['WkDate'], row['ISO_WK_NR'], row['Total'], row['YYYYWW'], row['QtyType'])\n",
-    "\n",
-    "sql_conn.commit()\n",
-    "\n",
-    "cursor.close()\n",
-    "\n",
-    "sql_conn.close()"
    ]
   },
   {
@@ -182,64 +149,23 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:19:54.475564Z",
-     "start_time": "2020-01-17T07:19:45.418800Z"
+     "end_time": "2020-02-12T05:56:02.917419Z",
+     "start_time": "2020-02-12T05:54:02.069747Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "por_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2019POR', sep=',', dtype={'PK': str, 'Planning_Wk': str,\n",
-    "                                                                                                       'MPA': str, 'SKU': str, 'Program': str,\n",
-    "                                                                                                       'Platform': str, 'Product_Line': str,\n",
-    "                                                                                                       'Target_Location': str, 'WkDate': str,\n",
-    "                                                                                                       'YYYYWW': str, 'Region': str,\n",
-    "                                                                                                       'Qty': int, 'FK': str, 'QtyType': str},\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2018POR\\2018_to_upload.csv', sep=',', dtype={'PK': str, 'Planning_Wk': str,\n",
+    "                                                                                          'MPA': str, 'SKU': str, 'Program': str,\n",
+    "                                                                                          'Platform': str, 'Product_Line': str,\n",
+    "                                                                                          'Target_Location': str, 'WkDate': str,\n",
+    "                                                                                          'YYYYWW': str, 'Region': str,\n",
+    "                                                                                          'Qty': int, 'FK': str, 'QtyType': str},\n",
     "    na_filter=False)\n",
+    "por_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)\n",
     "por_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T07:19:54.486534Z",
-     "start_time": "2020-01-17T07:19:54.477557Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cursor.execute(\"CREATE TABLE POR2019 ([PK] VARCHAR(100) PRIMARY KEY NOT NULL, [Planning_Wk] VARCHAR(20),\\\n",
-    "               [Product_Line] VARCHAR(2),[Platform] VARCHAR(50),[Program] VARCHAR(50),[Target_Location] VARCHAR(20),\\\n",
-    "               [SKU] VARCHAR(20), [MPA] VARCHAR(20), [WkDate] VARCHAR(20), [Qty] INT, [FK] VARCHAR(100),\\\n",
-    "               [YYYYWW] VARCHAR(6), [Region] VARCHAR(20), [QtyType] VARCHAR(10))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T07:50:24.345027Z",
-     "start_time": "2020-01-17T07:19:54.489526Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for index, row in por_df.iterrows():\n",
-    "\n",
-    "    cursor.execute(\"INSERT INTO POR2019([PK],[Planning_Wk],[Product_Line],[Platform],[Program], [Target_Location], \\\n",
-    "                   [SKU], [MPA],[WkDate],[Qty],[FK],[YYYYWW],[Region],[QtyType])values(?,?,?,?,?,?,?,?,?,?,?,?,?,?)\",\n",
-    "                   row['PK'], row['Planning_Wk'], row['Product_Line'], row['Platform'], row['Program'], row['Target_Location'],\n",
-    "                   row['SKU'], row['MPA'], row['WkDate'], row['Qty'], row['FK'], row['YYYYWW'], row['Region'], row['QtyType'])\n",
-    "\n",
-    "sql_conn.commit()\n",
-    "\n",
-    "cursor.close()\n",
-    "\n",
-    "sql_conn.close()"
    ]
   },
   {
@@ -254,59 +180,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-13T02:21:16.784324Z",
-     "start_time": "2020-01-13T02:21:16.729729Z"
+     "end_time": "2020-02-12T06:00:19.357900Z",
+     "start_time": "2020-02-12T06:00:19.105667Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "shipvPOR_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPVPOR', na_filter=False)\n",
-    "shipvPOR_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-13T02:21:21.241703Z",
-     "start_time": "2020-01-13T02:21:21.233764Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cursor.execute(\"CREATE TABLE SHIPVPOR2018([Planning_Wk] VARCHAR(20), [Product_Line] VARCHAR(2), [Platform] VARCHAR(50), \\\n",
-    "               [Program] VARCHAR(50),[MPA] VARCHAR(50), [Target_Location] VARCHAR(10), [SKU] VARCHAR(20), [WkDate] DATETIME, \\\n",
-    "               [PORQty] INT, [Region] VARCHAR(20), [ShipWkNo] INT, [ShipTotal] INT, [FK] VARCHAR(100), [YYYYWW] VARCHAR(6))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-13T02:21:33.761237Z",
-     "start_time": "2020-01-13T02:21:31.678679Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for index, row in shipvPOR_df.iterrows():\n",
-    "\n",
-    "    cursor.execute(\"INSERT INTO SHIPVPOR2018([Planning_Wk],[Product_Line],[Platform],[Program],[MPA], \\\n",
-    "                   [Target_Location], [SKU], [WkDate],[PORQty],[Region],[ShipWkNo],[ShipTotal], \\\n",
-    "                   [FK],[YYYYWW])values(?,?,?,?,?,?,?,?,?,?,?,?,?,?)\",\n",
-    "                   row['Planning_Wk'], row['Product_Line'], row['Platform'], row['Program'], row['MPA'],\n",
-    "                   row['Target_Location'], row['SKU'], row['WkDate'], row['PORQty'], row['Region'], row['ShipWkNo'],\n",
-    "                   row['ShipTotal'], row['FK'], row['YYYYWW'])\n",
-    "\n",
-    "sql_conn.commit()\n",
-    "\n",
-    "cursor.close()\n",
-    "\n",
-    "sql_conn.close()"
+    "ShipvPOR_df = pd.read_csv(\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPVPOR\\SHIPVPOR.csv', na_filter=False)\n",
+    "ShipvPOR_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)\n",
+    "ShipvPOR_df"
    ]
   },
   {
@@ -321,134 +205,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-07T06:12:50.920817Z",
-     "start_time": "2020-02-07T06:12:48.307809Z"
+     "end_time": "2020-02-12T07:08:43.412698Z",
+     "start_time": "2020-02-12T07:06:02.363257Z"
     }
    },
    "outputs": [],
    "source": [
     "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Final.csv', na_filter=False)\n",
-    "fullshipvpor_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T02:55:07.706301Z",
-     "start_time": "2020-02-07T02:55:07.699314Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fullshipvpor_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T03:11:49.210856Z",
-     "start_time": "2020-02-07T03:11:49.201881Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cursor.execute(\"CREATE TABLE FULLSHIPVPOR([Planning_Wk] VARCHAR(20), [YYYYWW] INT, [Region] VARCHAR(20), \\\n",
-    "               [MPA] VARCHAR(50),[Qty] INT, [QtyType] VARCHAR(10), [Platform] VARCHAR(50))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T03:42:09.210122Z",
-     "start_time": "2020-02-07T03:11:51.169382Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for index, row in fullshipvpor_df.iterrows():\n",
-    "\n",
-    "    cursor.execute(\"INSERT INTO FULLSHIPVPOR([Planning_Wk],[YYYYWW],[Region],[MPA], [Qty], [QtyType], [Platform]) \\\n",
-    "                   values(?,?,?,?,?,?,?)\",\n",
-    "                   row['Planning_Wk'], row['YYYYWW'], row['Region'], row['MPA'], row['Qty'],\n",
-    "                   row['QtyType'], row['Platform'])\n",
-    "\n",
-    "sql_conn.commit()\n",
-    "\n",
-    "cursor.close()\n",
-    "\n",
-    "sql_conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T06:13:04.264586Z",
-     "start_time": "2020-02-07T06:13:04.253617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cursor.execute(\"CREATE TABLE TESTFULLSHIPVPOR([Planning_Wk] VARCHAR(20), [YYYYWW] INT, [Region] VARCHAR(20), \\\n",
-    "               [MPA] VARCHAR(50),[Qty] INT, [QtyType] VARCHAR(10), [Platform] VARCHAR(50))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-07T06:25:41.526920Z",
-     "start_time": "2020-02-07T06:13:05.753112Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for row in fullshipvpor_df.itertuples():\n",
-    "\n",
-    "    cursor.execute(\"INSERT INTO TESTFULLSHIPVPOR([Planning_Wk],[YYYYWW],[Region],[MPA], [Qty], [QtyType], [Platform]) \\\n",
-    "                   values(?,?,?,?,?,?,?)\",\n",
-    "                   row.Planning_Wk, row.YYYYWW, row.Region, row.MPA, row.Qty,\n",
-    "                   row.QtyType, row.Platform)\n",
-    "\n",
-    "sql_conn.commit()\n",
-    "\n",
-    "cursor.close()\n",
-    "\n",
-    "sql_conn.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Closing connection (Ignore if not needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-13T02:19:46.378055Z",
-     "start_time": "2020-01-13T02:19:46.368135Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "sql_conn.commit()\n",
-    "\n",
-    "cursor.close()\n",
-    "\n",
-    "sql_conn.close()"
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Final1.csv', na_filter=False)\n",
+    "fullshipvpor_df = fullshipvpor_df.loc[~((fullshipvpor_df.MPA == 'NKG-YUEYANG') & (fullshipvpor_df.QtyType == 'SHIP'))]\n",
+    "fullshipvpor_df\n",
+    "fullshipvpor_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)"
    ]
   }
  ],
@@ -469,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
