Removed unnecessary row

--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T05:45:22.962154Z",
-     "start_time": "2020-02-12T05:45:21.846139Z"
+     "end_time": "2020-02-13T05:53:51.282348Z",
+     "start_time": "2020-02-13T05:53:48.962138Z"
     }
    },
    "outputs": [],
@@ -36,15 +36,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T06:00:10.942135Z",
-     "start_time": "2020-02-12T06:00:10.936150Z"
+     "end_time": "2020-02-13T01:55:36.867091Z",
+     "start_time": "2020-02-13T01:55:36.853129Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=SHIPVPOR;Trusted_Connection=yes\"\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=FULLSHIPVPOR;Trusted_Connection=yes\"\n",
     "\n",
-    "table_name = 'SHIPVPOR'\n",
+    "table_name = 'FULLSHIPVPOR2019'\n",
     "\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
@@ -60,54 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T07:05:49.514996Z",
-     "start_time": "2020-02-12T07:05:49.510010Z"
+     "end_time": "2020-02-13T05:58:37.324868Z",
+     "start_time": "2020-02-13T05:58:37.316882Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR1;UID=Admin;PWD=123\"\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR;UID=Admin;PWD=123\"\n",
     "\n",
-    "table_name = 'FULLSHIPVPOR1'\n",
+    "table_name = 'FULLSHIPVPOR'\n",
     "\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
     "engine = create_engine(new_con, fast_executemany=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-12T03:16:04.386233Z",
-     "start_time": "2020-02-12T03:13:29.240917Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('Final.csv', dtype={'Planning_Wk': str, 'YYYYWW': int, 'Region': str, 'MPA': str,\n",
-    "                                     'Qty': float, 'QtyType': str, 'Platform': str})\n",
-    "df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-11T01:47:41.252039Z",
-     "start_time": "2020-02-11T01:47:38.765417Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Final.csv', na_filter=False)\n",
-    "df"
    ]
   },
   {
@@ -202,17 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T07:08:43.412698Z",
-     "start_time": "2020-02-12T07:06:02.363257Z"
+     "end_time": "2020-02-13T06:02:36.585268Z",
+     "start_time": "2020-02-13T05:59:12.487466Z"
     }
    },
    "outputs": [],
    "source": [
     "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Final1.csv', na_filter=False)\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Finalfull.csv', na_filter=False)\n",
     "fullshipvpor_df = fullshipvpor_df.loc[~((fullshipvpor_df.MPA == 'NKG-YUEYANG') & (fullshipvpor_df.QtyType == 'SHIP'))]\n",
     "fullshipvpor_df\n",
     "fullshipvpor_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)"
