updated to sqlalchemy

--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-13T05:53:51.282348Z",
-     "start_time": "2020-02-13T05:53:48.962138Z"
+     "end_time": "2020-02-17T06:51:45.595692Z",
+     "start_time": "2020-02-17T06:51:39.051451Z"
     }
    },
    "outputs": [],
@@ -60,18 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-13T05:58:37.324868Z",
-     "start_time": "2020-02-13T05:58:37.316882Z"
+     "end_time": "2020-02-17T07:50:27.213935Z",
+     "start_time": "2020-02-17T07:50:27.207951Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR;UID=Admin;PWD=123\"\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=MJTESTSHIPVPOR;UID=Admin;PWD=123\"\n",
     "\n",
-    "table_name = 'FULLSHIPVPOR'\n",
+    "table_name = 'TESTSHIPVPOR'\n",
     "\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
@@ -170,17 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-13T06:02:36.585268Z",
-     "start_time": "2020-02-13T05:59:12.487466Z"
+     "end_time": "2020-02-17T07:54:10.211549Z",
+     "start_time": "2020-02-17T07:51:13.521256Z"
     }
    },
    "outputs": [],
    "source": [
     "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\SQL SERVER\\Finalfull.csv', na_filter=False)\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\FINALSHIPVPOR\\Final.csv', na_filter=False)\n",
     "fullshipvpor_df = fullshipvpor_df.loc[~((fullshipvpor_df.MPA == 'NKG-YUEYANG') & (fullshipvpor_df.QtyType == 'SHIP'))]\n",
     "fullshipvpor_df\n",
     "fullshipvpor_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)"
