Added data types

--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-17T06:51:45.595692Z",
-     "start_time": "2020-02-17T06:51:39.051451Z"
+     "end_time": "2020-03-03T05:39:48.774175Z",
+     "start_time": "2020-03-03T05:39:48.769202Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pyodbc\n",
-    "from sqlalchemy import create_engine\n",
+    "import sqlalchemy as db\n",
     "from urllib.parse import quote_plus"
    ]
   },
@@ -33,22 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-13T01:55:36.867091Z",
-     "start_time": "2020-02-13T01:55:36.853129Z"
+     "end_time": "2020-03-03T06:00:25.044741Z",
+     "start_time": "2020-03-03T06:00:25.036763Z"
     }
    },
    "outputs": [],
    "source": [
     "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=FULLSHIPVPOR;Trusted_Connection=yes\"\n",
     "\n",
-    "table_name = 'FULLSHIPVPOR2019'\n",
+    "table_name = 'FULLSHIPVPOR'\n",
     "\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "engine = create_engine(new_con, fast_executemany=True)"
+    "engine = db.create_engine(new_con, fast_executemany=True)"
    ]
   },
   {
@@ -60,22 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-17T07:50:27.213935Z",
-     "start_time": "2020-02-17T07:50:27.207951Z"
+     "end_time": "2020-02-24T07:40:25.633549Z",
+     "start_time": "2020-02-24T07:40:25.496555Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=MJTESTSHIPVPOR;UID=Admin;PWD=123\"\n",
-    "\n",
-    "table_name = 'TESTSHIPVPOR'\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=TEST;UID=Admin;PWD=123\"\n",
     "\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "engine = create_engine(new_con, fast_executemany=True)"
+    "engine = db.create_engine(new_con, fast_executemany=True)\n",
+    "\n",
+    "connection = engine.connect()\n",
+    "\n",
+    "table_name = 'TEST'"
    ]
   },
   {
@@ -87,22 +89,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T03:34:14.416966Z",
-     "start_time": "2020-02-12T03:34:13.408621Z"
+     "end_time": "2020-03-03T05:36:20.664307Z",
+     "start_time": "2020-03-03T05:36:19.885389Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             FK         SKU Platform Region           MPA  \\\n",
+      "60   EMEA1AS85A#636433672018W38  1AS85A#636    IBIZA   EMEA  NKG-THAILAND   \n",
+      "61   EMEA1AS85A#636433952018W42  1AS85A#636    IBIZA   EMEA  NKG-THAILAND   \n",
+      "62   EMEA1AS85A#636434022018W43  1AS85A#636    IBIZA   EMEA  NKG-THAILAND   \n",
+      "103  EMEA1AS85A#637433882018W41  1AS85A#637    IBIZA   EMEA  NKG-THAILAND   \n",
+      "104  EMEA1AS85A#637434022018W43  1AS85A#637    IBIZA   EMEA  NKG-THAILAND   \n",
+      "\n",
+      "    Target Location  WkDate  ISO_WK_NR   Qty  YYYYWW QtyType  \n",
+      "60          (blank)   43367         38  1200  201839    SHIP  \n",
+      "61          (blank)   43395         42  2400  201843    SHIP  \n",
+      "62          (blank)   43402         43  2400  201844    SHIP  \n",
+      "103         (blank)   43388         41  1200  201842    SHIP  \n",
+      "104         (blank)   43402         43  2400  201844    SHIP  \n",
+      "(16995, 11)\n"
+     ]
+    }
+   ],
    "source": [
     "shipment_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment.csv', na_filter=False)\n",
-    "shipment_df['YYYYWW'] = shipment_df['YYYYWW'].astype('str')\n",
-    "shipment_df = shipment_df[(shipment_df[['Total']] != 0).all(axis=1)]\n",
-    "shipment_df.to_sql(table_name, engine, if_exists='replace',\n",
-    "                   chunksize=None, index=False)\n",
-    "shipment_df"
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment.csv',\n",
+    "    na_filter=False)\n",
+    "shipment_df = shipment_df[(shipment_df[['Qty']] != 0).all(axis=1)]\n",
+    "shipment_df.to_sql(table_name,\n",
+    "                   engine,\n",
+    "                   if_exists='replace',\n",
+    "                   chunksize=None,\n",
+    "                   index=False,\n",
+    "                   dtype={\n",
+    "                       'FK': db.types.VARCHAR(length=50),\n",
+    "                       'SKU': db.types.VARCHAR(length=20),\n",
+    "                       'Platform': db.types.VARCHAR(length=50),\n",
+    "                       'Region': db.types.VARCHAR(length=8),\n",
+    "                       'MPA': db.types.VARCHAR(length=20),\n",
+    "                       'Target_Location': db.types.VARCHAR(length=20),\n",
+    "                       'WkDate': db.types.INTEGER(),\n",
+    "                       'ISO_WK_NR': db.types.INTEGER(),\n",
+    "                       'Qty': db.types.INTEGER(),\n",
+    "                       'YYYYWW': db.types.INTEGER(),\n",
+    "                       'QtyType': db.types.VARCHAR(length=4)\n",
+    "                   })\n",
+    "print(shipment_df.head())\n",
+    "print(shipment_df.shape)"
    ]
   },
   {
@@ -114,26 +154,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T05:56:02.917419Z",
-     "start_time": "2020-02-12T05:54:02.069747Z"
+     "end_time": "2020-03-03T05:58:57.018866Z",
+     "start_time": "2020-03-03T05:57:20.021551Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  PK   Qty Planning_Wk Product_Line  \\\n",
+      "0  01BMFOXCONN4UJ28B#629433112018W30     0     2018W30           2N   \n",
+      "1  01BMFOXCONN4UJ28B#629433182018W30     0     2018W30           2N   \n",
+      "2  01BMFOXCONN4UJ28B#629433252018W30     0     2018W30           2N   \n",
+      "3  01BMFOXCONN4UJ28B#629433252018W32     0     2018W32           2N   \n",
+      "4  01BMFOXCONN4UJ28B#629433322018W30  2016     2018W30           2N   \n",
+      "\n",
+      "               Platform                Program Target_Location         SKU  \\\n",
+      "0  TAIJI MINUS WL I-INK  TAIJI MINUS WL I-INK             01BM  4UJ28B#629   \n",
+      "1  TAIJI MINUS WL I-INK  TAIJI MINUS WL I-INK             01BM  4UJ28B#629   \n",
+      "2  TAIJI MINUS WL I-INK  TAIJI MINUS WL I-INK             01BM  4UJ28B#629   \n",
+      "3  TAIJI MINUS WL I-INK  TAIJI MINUS WL I-INK             01BM  4UJ28B#629   \n",
+      "4  TAIJI MINUS WL I-INK  TAIJI MINUS WL I-INK             01BM  4UJ28B#629   \n",
+      "\n",
+      "       MPA  WkDate  YYYYWW Region                          FK QtyType  \n",
+      "0  FOXCONN   43311  201831   EMEA  EMEA4UJ28B#629433112018W30     POR  \n",
+      "1  FOXCONN   43318  201832   EMEA  EMEA4UJ28B#629433182018W30     POR  \n",
+      "2  FOXCONN   43325  201833   EMEA  EMEA4UJ28B#629433252018W30     POR  \n",
+      "3  FOXCONN   43325  201833   EMEA  EMEA4UJ28B#629433252018W32     POR  \n",
+      "4  FOXCONN   43332  201834   EMEA  EMEA4UJ28B#629433322018W30     POR  \n",
+      "(1623582, 14)\n"
+     ]
+    }
+   ],
    "source": [
     "por_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2018POR\\2018_to_upload.csv', sep=',', dtype={'PK': str, 'Planning_Wk': str,\n",
-    "                                                                                          'MPA': str, 'SKU': str, 'Program': str,\n",
-    "                                                                                          'Platform': str, 'Product_Line': str,\n",
-    "                                                                                          'Target_Location': str, 'WkDate': str,\n",
-    "                                                                                          'YYYYWW': str, 'Region': str,\n",
-    "                                                                                          'Qty': int, 'FK': str, 'QtyType': str},\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2018POR\\2018_to_upload.csv',\n",
     "    na_filter=False)\n",
-    "por_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)\n",
-    "por_df"
+    "por_df.to_sql(table_name,\n",
+    "              engine,\n",
+    "              if_exists='replace',\n",
+    "              chunksize=None,\n",
+    "              index=False,\n",
+    "              dtype={\n",
+    "                  'PK': db.types.VARCHAR(length=50),\n",
+    "                  'Planning_Wk': db.types.VARCHAR(length=7),\n",
+    "                  'MPA': db.types.VARCHAR(length=20),\n",
+    "                  'SKU': db.types.VARCHAR(length=20),\n",
+    "                  'Program': db.types.VARCHAR(length=50),\n",
+    "                  'Platform': db.types.VARCHAR(length=50),\n",
+    "                  'Product_Line': db.types.VARCHAR(length=2),\n",
+    "                  'Target_Location': db.types.VARCHAR(length=20),\n",
+    "                  'WkDate': db.types.INTEGER(),\n",
+    "                  'YYYYWW': db.types.INTEGER(),\n",
+    "                  'Region': db.types.VARCHAR(length=8),\n",
+    "                  'Qty': db.types.INTEGER(),\n",
+    "                  'FK': db.types.VARCHAR(length=50),\n",
+    "                  'QtyType': db.types.VARCHAR(length=4)\n",
+    "              })\n",
+    "print(por_df.head())\n",
+    "print(por_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FULLSHIPVPOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-03T06:11:11.161522Z",
+     "start_time": "2020-03-03T06:07:26.634407Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Planning_Wk  YYYYWW Region      MPA   Qty QtyType              Platform\n",
+      "0     2018W30  201831   EMEA  FOXCONN     0     POR  TAIJI MINUS WL I-INK\n",
+      "1     2018W30  201832   EMEA  FOXCONN     0     POR  TAIJI MINUS WL I-INK\n",
+      "2     2018W30  201833   EMEA  FOXCONN     0     POR  TAIJI MINUS WL I-INK\n",
+      "3     2018W32  201833   EMEA  FOXCONN     0     POR  TAIJI MINUS WL I-INK\n",
+      "4     2018W30  201834   EMEA  FOXCONN  2016     POR  TAIJI MINUS WL I-INK\n",
+      "(5257662, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fullshipvpor_df = pd.read_csv(\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\FINALSHIPVPOR\\Final.csv',\n",
+    "    na_filter=False)\n",
+    "fullshipvpor_df = fullshipvpor_df.loc[~(\n",
+    "    (fullshipvpor_df.MPA == 'NKG-YUEYANG') &\n",
+    "    (fullshipvpor_df.QtyType == 'SHIP'))]\n",
+    "fullshipvpor_df.to_sql(table_name,\n",
+    "                       engine,\n",
+    "                       if_exists='replace',\n",
+    "                       chunksize=None,\n",
+    "                       index=False,\n",
+    "                       dtype={\n",
+    "                           'Planning_Wk': db.types.VARCHAR(length=7),\n",
+    "                           'YYYYWW': db.types.INTEGER(),\n",
+    "                           'Region': db.types.VARCHAR(length=8),\n",
+    "                           'MPA': db.types.VARCHAR(length=20),\n",
+    "                           'Qty': db.types.INTEGER(),\n",
+    "                           'QtyType': db.types.VARCHAR(length=4),\n",
+    "                           'Platform': db.types.VARCHAR(length=50)\n",
+    "                       })\n",
+    "print(fullshipvpor_df.head())\n",
+    "print(fullshipvpor_df.shape)"
    ]
   },
   {
@@ -155,35 +295,15 @@
    },
    "outputs": [],
    "source": [
-    "ShipvPOR_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPVPOR\\SHIPVPOR.csv', na_filter=False)\n",
-    "ShipvPOR_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)\n",
-    "ShipvPOR_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Full ShipVPOR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-17T07:54:10.211549Z",
-     "start_time": "2020-02-17T07:51:13.521256Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\FINALSHIPVPOR\\Final.csv', na_filter=False)\n",
-    "fullshipvpor_df = fullshipvpor_df.loc[~((fullshipvpor_df.MPA == 'NKG-YUEYANG') & (fullshipvpor_df.QtyType == 'SHIP'))]\n",
-    "fullshipvpor_df\n",
-    "fullshipvpor_df.to_sql(table_name, engine, if_exists='replace', chunksize=None, index=False)"
+    "# ShipvPOR_df = pd.read_csv(\n",
+    "#     r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPVPOR\\SHIPVPOR.csv',\n",
+    "#     na_filter=False)\n",
+    "# ShipvPOR_df.to_sql(table_name,\n",
+    "#                    engine,\n",
+    "#                    if_exists='replace',\n",
+    "#                    chunksize=None,\n",
+    "#                    index=False)\n",
+    "# ShipvPOR_df.head()"
    ]
   }
  ],
