--- a/Waterfall/SHIPMENT/Shipment.ipynb
+++ b/Waterfall/SHIPMENT/Shipment.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:24.174754Z",
-     "start_time": "2020-02-04T06:25:01.882723Z"
+     "end_time": "2020-03-03T07:07:23.111314Z",
+     "start_time": "2020-03-03T07:06:54.032968Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,9 @@
     "import datetime as dt\n",
     "import pandas as pd\n",
     "import time\n",
-    "df = pd.read_excel('Shipment_File.xlsx', sheet_name='Sheet2')"
+    "df = pd.read_excel(\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment_File.xlsx',\n",
+    "    sheet_name='Sheet2')"
    ]
   },
   {
@@ -43,8 +45,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:24.202617Z",
-     "start_time": "2020-02-04T06:25:24.176682Z"
+     "end_time": "2020-03-03T07:07:45.847519Z",
+     "start_time": "2020-03-03T07:07:45.824543Z"
     }
    },
    "outputs": [],
@@ -65,8 +67,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:24.229544Z",
-     "start_time": "2020-02-04T06:25:24.206600Z"
+     "end_time": "2020-03-03T07:07:46.769224Z",
+     "start_time": "2020-03-03T07:07:46.756257Z"
     }
    },
    "outputs": [],
@@ -87,14 +89,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:24.290083Z",
-     "start_time": "2020-02-04T06:25:24.262154Z"
+     "end_time": "2020-03-03T07:07:47.765660Z",
+     "start_time": "2020-03-03T07:07:47.734721Z"
     }
    },
    "outputs": [],
    "source": [
-    "df['Year'] = pd.TimedeltaIndex(\n",
-    "    df['WkDate'], unit='d') + dt.datetime(1899, 12, 30)\n",
+    "df['Year'] = pd.TimedeltaIndex(df['WkDate'], unit='d') + dt.datetime(\n",
+    "    1899, 12, 30)\n",
     "\n",
     "df['Year'] = df['Year'].dt.year"
    ]
@@ -111,16 +113,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:29.870675Z",
-     "start_time": "2020-02-04T06:25:27.553413Z"
+     "end_time": "2020-03-03T07:07:55.260996Z",
+     "start_time": "2020-03-03T07:07:52.593817Z"
     }
    },
    "outputs": [],
    "source": [
-    "df[['Year', 'ISO_WK_NR']] = df[[\n",
-    "    'Year', 'ISO_WK_NR']].astype('str')\n",
-    "df['Planning_Wk'] = df[['Year', 'ISO_WK_NR']].apply(\n",
-    "    lambda x: 'W'.join(x), axis=1)"
+    "df[['Year', 'ISO_WK_NR']] = df[['Year', 'ISO_WK_NR']].astype('str')\n",
+    "df['Planning_Wk'] = df[['Year', 'ISO_WK_NR']].apply(lambda x: 'W'.join(x),\n",
+    "                                                    axis=1)"
    ]
   },
   {
@@ -128,13 +129,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:30.433911Z",
-     "start_time": "2020-02-04T06:25:30.414961Z"
+     "end_time": "2020-03-03T07:07:56.739361Z",
+     "start_time": "2020-03-03T07:07:56.632648Z"
     }
    },
    "outputs": [],
    "source": [
-    "df"
+    "df = df.rename(columns={'Total':'Qty'})\n",
+    "df.head()"
    ]
   },
   {
@@ -149,16 +151,34 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:35.060843Z",
-     "start_time": "2020-02-04T06:25:35.054859Z"
+     "end_time": "2020-03-03T07:08:10.311258Z",
+     "start_time": "2020-03-03T07:08:10.305261Z"
     }
    },
    "outputs": [],
    "source": [
-    "region_dict = {'D735': 'NA', 'D795': 'NA', 'DV02LM': 'NA', 'DHNLLM': 'EMEA', 'N8LC': 'EMEA', '01CR': 'EMEA',\n",
-    "               'N8DB': 'EMEA', '01CT': 'EMEA', '01DQ': 'EMEA', '01BM': 'EMEA', 'B301': 'LA', 'H501': 'LA',\n",
-    "               'DV02': 'LA', 'H503': 'LA', 'H5V1': 'LA', 'N101': 'LA', 'Z402': 'LA', 'H415': 'APJ',\n",
-    "               'H416': 'APJ', 'WW': 'Region'}"
+    "region_dict = {\n",
+    "    'D735': 'NA',\n",
+    "    'D795': 'NA',\n",
+    "    'DV02LM': 'NA',\n",
+    "    'DHNLLM': 'EMEA',\n",
+    "    'N8LC': 'EMEA',\n",
+    "    '01CR': 'EMEA',\n",
+    "    'N8DB': 'EMEA',\n",
+    "    '01CT': 'EMEA',\n",
+    "    '01DQ': 'EMEA',\n",
+    "    '01BM': 'EMEA',\n",
+    "    'B301': 'LA',\n",
+    "    'H501': 'LA',\n",
+    "    'DV02': 'LA',\n",
+    "    'H503': 'LA',\n",
+    "    'H5V1': 'LA',\n",
+    "    'N101': 'LA',\n",
+    "    'Z402': 'LA',\n",
+    "    'H415': 'APJ',\n",
+    "    'H416': 'APJ',\n",
+    "    'WW': 'Region'\n",
+    "}"
    ]
   },
   {
@@ -166,8 +186,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:35.802582Z",
-     "start_time": "2020-02-04T06:25:35.746732Z"
+     "end_time": "2020-03-03T07:08:14.967362Z",
+     "start_time": "2020-03-03T07:08:14.916616Z"
     }
    },
    "outputs": [],
@@ -176,7 +196,7 @@
     "\n",
     "df['Region_Ori'] = df['Region_Ori'].fillna(df['Region'])\n",
     "\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -191,15 +211,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:39.396879Z",
-     "start_time": "2020-02-04T06:25:39.170178Z"
+     "end_time": "2020-03-03T07:08:34.154951Z",
+     "start_time": "2020-03-03T07:08:33.908569Z"
     }
    },
    "outputs": [],
    "source": [
     "# Change to FK From PK\n",
-    "df[['Region_Ori', 'SKU', 'WkDate', 'Planning_Wk']] = df[[\n",
-    "    'Region_Ori', 'SKU', 'WkDate', 'Planning_Wk']].astype('str')\n",
+    "df[['Region_Ori', 'SKU', 'WkDate',\n",
+    "    'Planning_Wk']] = df[['Region_Ori', 'SKU', 'WkDate',\n",
+    "                          'Planning_Wk']].astype('str')\n",
     "\n",
     "df['FK'] = df['Region_Ori'] + df['SKU'] + df['WkDate'] + df['Planning_Wk']"
    ]
@@ -216,8 +237,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:42.028848Z",
-     "start_time": "2020-02-04T06:25:41.956998Z"
+     "end_time": "2020-03-03T07:08:36.476251Z",
+     "start_time": "2020-03-03T07:08:36.390475Z"
     },
     "scrolled": true
    },
@@ -225,7 +246,7 @@
    "source": [
     "df = df.drop(columns=['Year', 'Region'])\n",
     "\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -247,20 +268,32 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:57.230135Z",
-     "start_time": "2020-02-04T06:25:48.178899Z"
+     "end_time": "2020-03-03T07:09:09.273481Z",
+     "start_time": "2020-03-03T07:08:58.501549Z"
     },
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "por_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2019POR\\2019_to_upload.csv', sep=',', dtype={'PK': str, 'Planning_Wk': str,\n",
-    "                                                                                                       'MPA': str, 'SKU': str, 'Program': str,\n",
-    "                                                                                                       'Platform': str, 'Product_Line': str,\n",
-    "                                                                                                       'Target_Location': str, 'WkDate': str,\n",
-    "                                                                                                       'YYYYWW': str, 'Region': str,\n",
-    "                                                                                                       'Qty': int, 'FK': str, 'QtyType': str},\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2019POR\\2019_to_upload.csv',\n",
+    "    sep=',',\n",
+    "    dtype={\n",
+    "        'PK': str,\n",
+    "        'Planning_Wk': str,\n",
+    "        'MPA': str,\n",
+    "        'SKU': str,\n",
+    "        'Program': str,\n",
+    "        'Platform': str,\n",
+    "        'Product_Line': str,\n",
+    "        'Target_Location': str,\n",
+    "        'WkDate': str,\n",
+    "        'YYYYWW': str,\n",
+    "        'Region': str,\n",
+    "        'Qty': int,\n",
+    "        'FK': str,\n",
+    "        'QtyType': str\n",
+    "    },\n",
     "    na_filter=False)\n",
     "por_df"
    ]
@@ -270,14 +303,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:57.799640Z",
-     "start_time": "2020-02-04T06:25:57.232121Z"
+     "end_time": "2020-03-03T07:09:17.268403Z",
+     "start_time": "2020-03-03T07:09:16.669373Z"
     }
    },
    "outputs": [],
    "source": [
     "dfskumpa = por_df.groupby(['SKU', 'MPA'])['Qty'].sum().reset_index()\n",
-    "dfskumpa"
+    "dfskumpa.head()"
    ]
   },
   {
@@ -285,8 +318,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:57.827530Z",
-     "start_time": "2020-02-04T06:25:57.802595Z"
+     "end_time": "2020-03-03T07:09:20.245278Z",
+     "start_time": "2020-03-03T07:09:20.202394Z"
     }
    },
    "outputs": [],
@@ -301,8 +334,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:57.862436Z",
-     "start_time": "2020-02-04T06:25:57.829522Z"
+     "end_time": "2020-03-03T07:09:24.192227Z",
+     "start_time": "2020-03-03T07:09:24.163299Z"
     }
    },
    "outputs": [],
@@ -315,68 +348,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:25:57.884376Z",
-     "start_time": "2020-02-04T06:25:57.864429Z"
+     "end_time": "2020-03-03T07:09:27.029512Z",
+     "start_time": "2020-03-03T07:09:26.902849Z"
     }
    },
    "outputs": [],
    "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Duplicates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:23.120050Z",
-     "start_time": "2020-01-17T08:13:23.117058Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# duplicatedRowsDF = df[df.duplicated('PK')]\n",
-    "\n",
-    "# duplicatedRowsDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:23.135010Z",
-     "start_time": "2020-01-17T08:13:23.122044Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# dropdf = df.drop_duplicates(subset='PK', keep='first')\n",
-    "\n",
-    "# dropdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:23.145979Z",
-     "start_time": "2020-01-17T08:13:23.138001Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# df = dropdf.drop(columns=['Year', 'Region'])\n",
-    "\n",
-    "# df"
+    "df = df.rename(columns={'Region_Ori':'Region'})\n",
+    "df.head()"
    ]
   },
   {
@@ -391,15 +370,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:26:28.683511Z",
-     "start_time": "2020-02-04T06:26:28.618688Z"
+     "end_time": "2020-03-03T07:09:35.530106Z",
+     "start_time": "2020-03-03T07:09:35.499182Z"
     }
    },
    "outputs": [],
    "source": [
-    "dffinalarr = df[['FK', 'SKU', 'Platform', 'Region_Ori', 'MPA',\n",
-    "                 'Target Location', 'WkDate', 'ISO_WK_NR', 'Total']]\n",
-    "dffinalarr"
+    "dffinalarr = df[[\n",
+    "    'FK', 'SKU', 'Platform', 'Region', 'MPA', 'Target Location', 'WkDate',\n",
+    "    'ISO_WK_NR', 'Qty'\n",
+    "]]\n",
+    "dffinalarr.head()"
    ]
   },
   {
@@ -407,8 +388,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:26:47.135143Z",
-     "start_time": "2020-02-04T06:26:46.676931Z"
+     "end_time": "2020-03-03T07:09:40.873517Z",
+     "start_time": "2020-03-03T07:09:40.306001Z"
     }
    },
    "outputs": [],
@@ -416,7 +397,7 @@
     "new = df['Planning_Wk'].str.split('W', n=1, expand=True)\n",
     "dffinalarr['YYYY'] = new[0]\n",
     "dffinalarr['WW'] = new[1]\n",
-    "dffinalarr"
+    "dffinalarr.head()"
    ]
   },
   {
@@ -424,8 +405,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-04T06:28:07.733243Z",
-     "start_time": "2020-02-04T06:28:07.525740Z"
+     "end_time": "2020-03-03T07:09:46.196303Z",
+     "start_time": "2020-03-03T07:09:45.914060Z"
     }
    },
    "outputs": [],
@@ -437,132 +418,7 @@
     "dffinalarr['YYYYWW'] = dffinalarr['YYYY'] + dffinalarr['WW']\n",
     "dffinalarr = dffinalarr.drop(columns=['YYYY', 'WW'])\n",
     "dffinalarr['QtyType'] = 'SHIP'\n",
-    "dffinalarr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Read POR to get Program"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.010665Z",
-     "start_time": "2020-01-17T08:13:24.006678Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# por_df = pd.read_csv(\n",
-    "#     r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\Waterfall\\POR\\2019POR\\2019_to_upload.csv', sep=',', dtype={'PK': str, 'Planning_Wk': str,\n",
-    "#                                                                                                        'MPA': str, 'SKU': str, 'Program': str,\n",
-    "#                                                                                                        'Platform': str, 'Product_Line': str,\n",
-    "#                                                                                                        'Target_Location': str, 'Region': str,\n",
-    "#                                                                                                        'WkDate': 'str',  'YYYYWW': str,\n",
-    "#                                                                                                        'Qty': int, 'FK': str})\n",
-    "# por_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.025626Z",
-     "start_time": "2020-01-17T08:13:24.014654Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# rename_dict = por_df.set_index('Platform').to_dict()['Program']\n",
-    "\n",
-    "# rename_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.034612Z",
-     "start_time": "2020-01-17T08:13:24.027621Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# dffinalarr['Platform'] = dffinalarr['Platform'].replace(rename_dict)\n",
-    "# dffinalarr = dffinalarr.rename(columns={'Platform':'Program'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.048567Z",
-     "start_time": "2020-01-17T08:13:24.037593Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# dffinalarr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.060535Z",
-     "start_time": "2020-01-17T08:13:24.050559Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# new = df['Planning_Wk'].str.split('W', n=1, expand = True)\n",
-    "# dffinalarr['YYYY'] = new[0]\n",
-    "# dffinalarr['WW'] = new[1]\n",
-    "# dffinalarr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.074504Z",
-     "start_time": "2020-01-17T08:13:24.062527Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# dffinalarr[\"WW\"] = dffinalarr[\"WW\"].astype(int)\n",
-    "# dffinalarr[\"WW\"] = dffinalarr[\"WW\"] + 1\n",
-    "# dffinalarr[\"WW\"] = dffinalarr['WW'].map(\"{:02}\".format)\n",
-    "# dffinalarr[\"WW\"] = dffinalarr[\"WW\"].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.086462Z",
-     "start_time": "2020-01-17T08:13:24.077487Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# dffinalarr['YYYYWW'] = dffinalarr['YYYY'] + dffinalarr['WW']\n",
-    "# dffinalarr = dffinalarr.drop(columns=['YYYY', 'WW'])\n",
-    "# dffinalarr"
+    "dffinalarr.head()"
    ]
   },
   {
@@ -577,8 +433,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T08:13:24.772629Z",
-     "start_time": "2020-01-17T08:13:24.089455Z"
+     "end_time": "2020-03-03T07:10:02.657133Z",
+     "start_time": "2020-03-03T07:10:01.925011Z"
     }
    },
    "outputs": [],
@@ -604,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
