Removed NKG-YUEYANG at shipment and modify Final SHIPVPOR

--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T05:39:48.774175Z",
-     "start_time": "2020-03-03T05:39:48.769202Z"
+     "end_time": "2020-03-04T02:52:42.633397Z",
+     "start_time": "2020-03-04T02:52:40.650635Z"
     }
    },
    "outputs": [],
@@ -36,8 +36,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:00:25.044741Z",
-     "start_time": "2020-03-03T06:00:25.036763Z"
+     "end_time": "2020-03-04T02:52:45.045097Z",
+     "start_time": "2020-03-04T02:52:44.975279Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T05:36:20.664307Z",
-     "start_time": "2020-03-03T05:36:19.885389Z"
+     "end_time": "2020-03-04T02:36:35.295482Z",
+     "start_time": "2020-03-04T02:36:33.519498Z"
     }
    },
    "outputs": [],
@@ -102,6 +102,7 @@
     "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment.csv',\n",
     "    na_filter=False)\n",
     "shipment_df = shipment_df[(shipment_df[['Qty']] != 0).all(axis=1)]\n",
+    "shipment_df = shipment_df.loc[(shipment_df['MPA'] != 'NKG-YUEYANG')]\n",
     "shipment_df.to_sql(table_name,\n",
     "                   engine,\n",
     "                   if_exists='replace',\n",
@@ -183,18 +184,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:11:11.161522Z",
-     "start_time": "2020-03-03T06:07:26.634407Z"
+     "end_time": "2020-03-04T02:59:01.089158Z",
+     "start_time": "2020-03-04T02:52:50.422391Z"
     }
    },
    "outputs": [],
    "source": [
     "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\STAMS\\Waterfall\\FINALSHIPVPOR\\Final.csv',\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\FinalShipVPOR\\FinalShipVPOR.csv',\n",
     "    na_filter=False)\n",
-    "fullshipvpor_df = fullshipvpor_df.loc[~(\n",
-    "    (fullshipvpor_df.MPA == 'NKG-YUEYANG') &\n",
-    "    (fullshipvpor_df.QtyType == 'SHIP'))]\n",
     "fullshipvpor_df.to_sql(table_name,\n",
     "                       engine,\n",
     "                       if_exists='replace',\n",
@@ -211,36 +209,6 @@
     "                       })\n",
     "print(fullshipvpor_df.head())\n",
     "print(fullshipvpor_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ShipVPOR File"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-12T06:00:19.357900Z",
-     "start_time": "2020-02-12T06:00:19.105667Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# ShipvPOR_df = pd.read_csv(\n",
-    "#     r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPVPOR\\SHIPVPOR.csv',\n",
-    "#     na_filter=False)\n",
-    "# ShipvPOR_df.to_sql(table_name,\n",
-    "#                    engine,\n",
-    "#                    if_exists='replace',\n",
-    "#                    chunksize=None,\n",
-    "#                    index=False)\n",
-    "# ShipvPOR_df.head()"
    ]
   }
  ],
