Added POR cleaning code for J POR

--- a/Waterfall/POR/POR Data Cleaning.ipynb
+++ b/Waterfall/POR/POR Data Cleaning.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:20:37.802807Z",
-     "start_time": "2020-03-03T06:20:35.693740Z"
+     "end_time": "2020-03-10T01:52:15.120822Z",
+     "start_time": "2020-03-10T01:52:13.578303Z"
     }
    },
    "outputs": [],
@@ -18,10 +18,151 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-10T02:31:03.729477Z",
+     "start_time": "2020-03-10T02:28:20.912612Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "AllPOR = pd.read_excel(r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\JoannePOR\\POR Waterfall_Yr 2020.xlsx',\n",
+    "                       usecols='A,C,E:H,J,K:CJ',sheet_name=\"W09 POR Data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-10T02:10:45.494685Z",
+     "start_time": "2020-03-10T02:10:45.486707Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def convert (PORDATA):\n",
+    "    Dates = PORDATA.columns[7:].values\n",
+    "    PORDATA['Attribute'] = 'N/A'\n",
+    "    col = 7\n",
+    "    new_por = pd.DataFrame()\n",
+    "    for date in Dates:\n",
+    "        PORDATA['Attribute'] = date\n",
+    "        PORDATA['Value'] = PORDATA.iloc[:,col]\n",
+    "        new_por = new_por.append(PORDATA)\n",
+    "        col = col + 1\n",
+    "    final_por = new_por.iloc[:,list(range(7)) + [-2,-1]]\n",
+    "    return final_por"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-10T02:31:56.193224Z",
+     "start_time": "2020-03-10T02:31:56.163302Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "AllPOR.iloc[:,7:] = AllPOR.iloc[:,7:].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-10T02:31:57.451869Z",
+     "start_time": "2020-03-10T02:31:57.415926Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "AllPOR.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-10T02:32:25.698124Z",
+     "start_time": "2020-03-10T02:32:15.529911Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "convert(AllPOR).to_csv('2020W09.csv',index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**J POR**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-09T07:14:55.204277Z",
+     "start_time": "2020-03-09T07:14:55.198294Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "path = os.getcwd()\n",
+    "files = os.listdir(\n",
+    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\JoannePOR\\Converted\\2019POR')\n",
+    "os.chdir(r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\JoannePOR\\Converted\\2019POR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-09T07:15:28.048122Z",
+     "start_time": "2020-03-09T07:15:28.044143Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "files_csv = [f for f in files if f[0:4] == '2019']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-09T07:16:10.944783Z",
+     "start_time": "2020-03-09T07:15:58.679591Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "\n",
+    "for f in files_csv:\n",
+    "    data = pd.read_csv(f)\n",
+    "    df = df.append(data)\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
@@ -102,8 +243,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:47:24.303131Z",
-     "start_time": "2020-03-03T06:47:14.240022Z"
+     "end_time": "2020-03-09T07:17:09.116041Z",
+     "start_time": "2020-03-09T07:16:47.195679Z"
     }
    },
    "outputs": [],
@@ -127,8 +268,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:49:28.759260Z",
-     "start_time": "2020-03-03T06:48:12.223291Z"
+     "end_time": "2020-03-09T07:20:28.472903Z",
+     "start_time": "2020-03-09T07:19:36.983407Z"
     }
    },
    "outputs": [],
@@ -152,8 +293,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:49:40.718863Z",
-     "start_time": "2020-03-03T06:49:40.182820Z"
+     "end_time": "2020-03-09T07:20:32.690485Z",
+     "start_time": "2020-03-09T07:20:31.351037Z"
     }
    },
    "outputs": [],
@@ -168,8 +309,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:49:55.681557Z",
-     "start_time": "2020-03-03T06:49:54.801910Z"
+     "end_time": "2020-03-09T07:20:34.670222Z",
+     "start_time": "2020-03-09T07:20:32.693445Z"
     },
     "scrolled": true
    },
@@ -185,8 +326,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:49:56.660640Z",
-     "start_time": "2020-03-03T06:49:56.645131Z"
+     "end_time": "2020-03-09T07:20:34.693095Z",
+     "start_time": "2020-03-09T07:20:34.672151Z"
     }
    },
    "outputs": [],
@@ -206,8 +347,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:12.430761Z",
-     "start_time": "2020-03-03T06:50:06.658542Z"
+     "end_time": "2020-03-09T07:20:46.248734Z",
+     "start_time": "2020-03-09T07:20:38.593215Z"
     }
    },
    "outputs": [],
@@ -232,8 +373,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:19.985293Z",
-     "start_time": "2020-03-03T06:50:19.958365Z"
+     "end_time": "2020-03-09T07:20:46.273668Z",
+     "start_time": "2020-03-09T07:20:46.250729Z"
     },
     "scrolled": true
    },
@@ -254,8 +395,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:28.285253Z",
-     "start_time": "2020-03-03T06:50:26.841276Z"
+     "end_time": "2020-03-09T07:20:53.097830Z",
+     "start_time": "2020-03-09T07:20:49.235165Z"
     }
    },
    "outputs": [],
@@ -277,8 +418,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:39.422800Z",
-     "start_time": "2020-03-03T06:50:35.770844Z"
+     "end_time": "2020-03-09T07:21:12.216357Z",
+     "start_time": "2020-03-09T07:21:01.264654Z"
     }
    },
    "outputs": [],
@@ -300,8 +441,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:44.705356Z",
-     "start_time": "2020-03-03T06:50:43.475990Z"
+     "end_time": "2020-03-09T07:21:16.004258Z",
+     "start_time": "2020-03-09T07:21:12.219351Z"
     }
    },
    "outputs": [],
@@ -314,8 +455,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:45.389682Z",
-     "start_time": "2020-03-03T06:50:45.356772Z"
+     "end_time": "2020-03-09T07:21:16.039171Z",
+     "start_time": "2020-03-09T07:21:16.006258Z"
     }
    },
    "outputs": [],
@@ -328,8 +469,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:49.882985Z",
-     "start_time": "2020-03-03T06:50:49.647614Z"
+     "end_time": "2020-03-09T07:21:16.591665Z",
+     "start_time": "2020-03-09T07:21:16.041126Z"
     }
    },
    "outputs": [],
@@ -342,8 +483,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:50:58.290380Z",
-     "start_time": "2020-03-03T06:50:58.270436Z"
+     "end_time": "2020-03-09T07:21:16.623569Z",
+     "start_time": "2020-03-09T07:21:16.594646Z"
     }
    },
    "outputs": [],
@@ -363,8 +504,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:51:32.603242Z",
-     "start_time": "2020-03-03T06:51:29.413350Z"
+     "end_time": "2020-03-09T07:21:26.876141Z",
+     "start_time": "2020-03-09T07:21:16.626566Z"
     }
    },
    "outputs": [],
@@ -387,8 +528,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:51:44.677369Z",
-     "start_time": "2020-03-03T06:51:43.848054Z"
+     "end_time": "2020-03-09T07:21:28.762098Z",
+     "start_time": "2020-03-09T07:21:26.878138Z"
     }
    },
    "outputs": [],
@@ -405,8 +546,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:52:53.286100Z",
-     "start_time": "2020-03-03T06:52:52.586942Z"
+     "end_time": "2020-03-09T07:21:39.779667Z",
+     "start_time": "2020-03-09T07:21:38.400358Z"
     }
    },
    "outputs": [],
@@ -430,13 +571,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:53:44.274320Z",
-     "start_time": "2020-03-03T06:53:25.821333Z"
+     "end_time": "2020-03-09T07:22:36.998931Z",
+     "start_time": "2020-03-09T07:22:03.631146Z"
     }
    },
    "outputs": [],
    "source": [
-    "por_df.to_csv('2018_to_upload.csv', index=False)"
+    "por_df.to_csv('2019_to_upload.csv', index=False)"
    ]
   }
  ],
